# SISE_m2_enedis

./: .dockerignore  .env.example  .gitignore  Accueil.py  Dockerfile  Dockerfile.api  README.md  app.py  docker-compose.yml  home.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.python
.streamlit/: config.toml  secrets_example.toml
MLmodels/: features_target_columns.pkl  features_target_columns_classification.pkl  features_target_columns_regression.pkl  label_encoder_target.pkl  pipeline_best_regression.pkl  pipeline_xgboost_classification.pkl
backend/: main.py
backend/models/: input_model.py
backend/services/: __init__.py  data_prepartion.py  prediction.py
data/: climate_zones.csv
docs/: DOC_FONCTIONNELLE.md  DOC_TECHNIQUE.md  RAPPORT.md
pages/: 01_Carte_Stats_Dataset.py  01_Stats_Dataset.py  01_data.py  02_Carte_DPE.py  02_Prévision_DPE.py  02_prediction.py  03_Requetes_API.py  api_requests.py  context.py  contexte.py  data.py  datasets.py  intro.py  map.py  prediction.py  retrain_models.py  stat_test.py
src/data_requesters/: Ademe.py  Elevation.py  __init__.py  ademe.py  api_requesters.py  base_api.py  elevation.py  enedis.py  geo_features.py  helper.py
src/processing/: data_cleaner.py
src/utils/: dataloader.py
